# boardv4

./: .gitignore  CMakeLists.txt  README.md
BoardName/: CMakeLists.txt  sl_settings.json
BoardName/src/: config.h  sl_config.h
BoardName/src/config/: clock_config.c  debug_config.c  devfs_config.c  link_config.c  mcu_config.c  sos_config.c  sys_config.c  usb_config.c
SDK/: CMakeLists.txt
apps/: CMakeLists.txt
boot/: boot_config.c
src/: CMakeLists.txt  config.h
src/config/: cache_config.c  clock_config.c  debug_config.c  devfs_config.c  fs_config.c  link_config.h  os_config.c  sos_config.c
